[project]
name = "the-blogs"
version = "0.1.0"
description = "A shared blogging platform — Web Engineering project"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "flask-login>=0.6",
    "werkzeug>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", ".venv/*"]

[tool.coverage.report]
show_missing = true
